fix the misused createAndLogonPinUser() when the user has already created